# caliclaw

./: .env.example  .gitignore  LICENSE  README.md  __main__.py  caliclaw  caliclaw.service  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: SECURITY.md
automation/: scheduler.py  triggers.py
cli/: caliclaw_cli.py  mic.py  migrate.py  tui.py  ui.py
cli/commands/: freedom.py  init.py  llm.py  model.py  obsidian.py  project.py  (+2 more)
core/: __init__.py  agent.py  app.py  backup.py  config.py  daemon.py  db.py  gym.py  handoff.py  loops.py  migrate.py  orchestrator.py  projects.py  protocols.py  queue.py  souls.py
docs/: README.md  agents.md  backup.md  commands.md  configuration.md  contributing.md  heartbeats.md  memory.md  security.md  skills.md  troubleshooting.md
intelligence/: compaction.py  memory.py  obsidian.py
media/: images.py  transcribe.py
memory/: MEMORY.md
monitoring/: dashboard.py  tracking.py
safety/: anti_hallucination.py  input_filter.py
scripts/: backup.sh
security/: allowlist.py  approval.py  claude_permissions.py  engine_permissions.py  permissions.py  vault.py
telegram/: bot.py
tests/: conftest.py  test_agent.py  test_backup.py  test_bot_features.py  test_claude_permissions.py  test_compaction.py  test_config.py  test_db.py  test_engine_permissions.py  test_gym.py  test_handlers.py  test_input_filter.py  test_integration.py  test_llm_cmd.py  test_loops.py  test_memory.py  test_migrate.py  test_model_cmd.py  test_obsidian.py  test_orchestrator.py  test_permissions.py  test_projects.py  test_queue.py  test_safety.py  test_scheduler.py  test_souls.py  test_tracking.py  test_transcribe.py  test_vault.py
(+30 files in other folders)
